--- a/e-commerce-system/src/main/resources/application.properties
+++ b/e-commerce-system/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+# Enable log of transaction
+# Level DEBUG
+# logging.level.org.hibernate.engine.transaction.internal.TransactionImpl=DEBUG
+
+# spring.jpa.properties.hibernate.format_sql=true
+
+# logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
